[tool.poetry]
name = "renaissancebot"
version = "0.1.0"
description = ""
authors = ["Никита Кузнецов <nikkuzya21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
pydantic-settings = "^2.3.4"
aiosqlite = "^0.20.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
